# rcmconvert

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  command_parser.cpp  command_parser.h  converter.cpp  rcm.h  rcmreader.cpp  rcmreader.h  rcmwriter.cpp  rcmwriter.h
src/internal/: rcm_internal.h
tests/: CMakeLists.txt  Header_test.cpp  Reader_test.cpp  Writer_test.cpp
